fix: hide extra space in "run the update" button

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -87,3 +87,7 @@
     width: 100%;
     height: 32px;
 }
+
+.woocommerce-message .submit a br {
+    display: none;
+}
